--- a/app/source/css/components/AppointmentCard.styl
+++ b/app/source/css/components/AppointmentCard.styl
@@ -87,8 +87,8 @@
 .btn-default {
     &.btn-editCard {
       position: absolute;
-      top: 3px;
-      right: 20px;
+      top: 2px;
+      right: 15px;
       padding: 4px 12px;
     }
 }
