--- a/app/source/css/components/SectionTitle.styl
+++ b/app/source/css/components/SectionTitle.styl
@@ -91,3 +91,12 @@ $gray = lighten(#000, 33.5%);
         }
     }
 }
+
+/* Inside a PaddingBox or Box, remove the margins */
+[class^=PaddedBox],
+[class^=Box] {
+    > .SectionTitle {
+        margin: 0;
+    }
+}
+
